# BeaconOS

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  skills-lock.json
docs/: RUNBOOK.md
migrations/: env.py
migrations/versions/: fef76eff92c1_initial_schema.py
scratch/: __init__.py  replay_event.py  security_demo.py  seed_sandbox.py  verify_services.py
scratch/fixtures/: nws_severe_weather_alert.json  usgs_ridgecrest_2019_m71.json
src/beacon/: __init__.py  config.py  logging.py  main.py  security.py  tracing.py
src/beacon/agents/: __init__.py  analysis.py  base.py  commitment.py  critique.py  evidence_synthesizer.py  external_intelligence.py  pipeline.py  planner.py  recommendation.py  supervisor.py  triage.py  workspace_investigator.py
src/beacon/api/: __init__.py  router.py
src/beacon/api/routes/: __init__.py  crises.py  decisions.py  events.py  evidence.py  health.py  missions.py  plans.py  tasks.py
src/beacon/db/: __init__.py  base.py
src/beacon/db/models/: __init__.py  actors.py  claims.py  core.py  crisis.py  decisions.py  events.py  evidence.py  intelligence.py  memory.py  missions.py  operations.py  plans.py  resources.py  simulation.py  tasks.py
src/beacon/domain/: __init__.py  enums.py  schemas.py
src/beacon/events/: __init__.py
src/beacon/ingestion/: __init__.py  gdacs.py  nws.py  scheduler.py  usgs.py
src/beacon/llm/: __init__.py  embeddings.py
src/beacon/mcp/: __init__.py  client.py  geospatial_server.py  hazard_server.py  operations_server.py  resource_server.py  verification_server.py
src/beacon/services/: __init__.py  approval.py  memory.py  redis.py  task_manager.py  world_model.py
src/beacon/slack/: __init__.py  app.py  block_kit.py  mission_timeline.py  search.py  sources.py
tests/: test_agents.py  test_block_kit.py  test_config.py  test_enums.py  test_ingestion.py  test_pipeline.py  test_replay.py  test_schemas.py  test_security.py  test_slack_search.py  test_sources.py
