[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon-command"
version = "0.1.0"
description = "Evidence-grounded crisis intelligence and coordination system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<4"
authors = [
    {name = "Beacon Team"},
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Data validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",

    # Redis
    "redis[hiredis]>=5.2.0",

    # LLM & Agents
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "mistralai>=2.6.0",

    # Slack
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.33.0",
    "aiohttp>=3.9.0",

    # MCP
    "mcp[cli]>=1.1.0",

    # HTTP client
    "httpx>=0.27.0",

    # Retry & resilience
    "tenacity>=9.0.0",

    # Logging
    "structlog>=24.4.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",

    # Feed parsing
    "feedparser>=6.0.0",

    # Geospatial
    "geopy>=2.4.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "httpx>=0.27.0",  # for TestClient
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
]

langsmith = [
    "langsmith>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["beacon"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.hatch.build.targets.wheel]
packages = ["src/beacon"]
